<resources>
    <!-- Action bar titles -->
    <string name="app_name">Inventory App</string>
    <string name="add_activity">Add a new product</string>
    <string name="product_detail">Product Details</string>

    <!-- labels -->
    <string name="name_label">Product name</string>
    <string name="price_label">Price</string>
    <string name="quantity_label">Quantity</string>
    <string name="total_sales_label">Total Sales</string>
    <string name="product_image_label">Product Image</string>

    <!-- Hints -->
    <string name="image_hint">Choose an image…</string>
    <string name="name_hint">ex: Widget</string>
    <string name="price_hint">ex: 20.50</string>
    <string name="quantity_hint">ex: 25</string>

    <!-- List Item text -->
    <string name="money_text_view">$%1$s</string>

    <!-- buttons -->
    <string name="save_button">Save</string>
    <string name="order_button">Order from supplier</string>
    <string name="receive_button">Receive Shipment</string>
    <string name="record_sale">Record sale</string>
    <string name="choose_image">Browse</string>

    <!-- Dialog Titles -->
    <string name="receive_dialog_title">Enter the quantity received</string>
    <string name="record_sale_dialog_title">Enter the quantity sold</string>

    <!-- Dialog Buttons -->
    <string name="update_quantity_button">Update Quantity</string>
    <string name="cancel_button">Cancel</string>

    <!-- Edit Action -->
    <string name="edit_action">Edit</string>

    <!-- Order email -->
    <string name="order_email_address">total_product_fulfillment@example.com</string>
    <string name="order_subject">Shipment order request</string>

</resources>
