<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_product"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.android.inventoryapp.EditorActivity">

    <EditText
        android:id="@+id/product_name_edit_text"
        android:layout_width="match_parent"
        android:hint="@string/name_label"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/price_edit_text"
        android:layout_width="match_parent"
        android:hint="@string/price_label"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/quantity_edit_text"
        android:inputType="number"
        android:layout_width="match_parent"
        android:hint="@string/quantity_label"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_button"
        android:text="@string/save_button"/>

</LinearLayout>
