<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_product_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.inventoryapp.ProductDetailActivity">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label"/>

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_label"
            tools:text="The amazing widget"/>

        <TextView
            android:id="@+id/price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_text_view"
            android:paddingTop="16dp"
            android:text="@string/price_label"/>

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/price_label"
            tools:text="$14.99"/>

        <TextView
            android:id="@+id/quantity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/price_text_view"
            android:paddingTop="16dp"
            android:text="@string/quantity_label"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantity_label"
            tools:text="24"/>

        <TextView
            android:id="@+id/total_sales_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantity_text_view"
            android:paddingTop="16dp"
            android:text="@string/total_sales_label"/>

        <TextView
            android:id="@+id/total_sales_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/total_sales_label"/>

        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/total_sales_text_view"
            android:text="@string/order_button"/>

        <Button
            android:id="@+id/shipment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_button"
            android:text="@string/receive_button"/>

        <Button
            android:id="@+id/record_sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/shipment_button"
            android:text="@string/record_sale"/>

    </RelativeLayout>

</ScrollView>